fix: overlapping navbar

--- a/wiki/public/scss/wiki.scss
+++ b/wiki/public/scss/wiki.scss
@@ -210,6 +210,10 @@ textarea.wiki-content {
 // navbar
 .navbar-nav {
 	height: 100%;
+	.dropdown-menu {
+	    position: sticky;
+	}
+	
 }
 
 .nav-item {
